--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,4 @@
 # Discord webhook URL (required)
 DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/YOUR_WEBHOOK_ID/YOUR_WEBHOOK_TOKEN
+# Discord Bot Token (required for slash commands)
+DISCORD_BOT_TOKEN=your_bot_token_here
