--- a/.env.template
+++ b/.env.template
@@ -2,3 +2,5 @@
 DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/YOUR_WEBHOOK_ID/YOUR_WEBHOOK_TOKEN
 # Discord Bot Token (required for slash commands)
 DISCORD_BOT_TOKEN=your_bot_token_here
+# Metal API Key (optional, for market data)
+METALS_DEV_KEY=your_api_key_here
