--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,16 @@
-# Discord webhook URL (required)
-DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/YOUR_WEBHOOK_ID/YOUR_WEBHOOK_TOKEN
-# Discord Bot Token (required for slash commands)
+# Silver Market Bot - Environment Variables
+
+# Discord Bot Token (required for bot mode)
 DISCORD_BOT_TOKEN=your_bot_token_here
-# Metal API Key (optional, for market data)
+
+# Discord Webhook URL (for notifications)
+DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/xxx/yyy
+
+# Metals.dev API Key (optional, 100 calls/month free)
 METALS_DEV_KEY=your_api_key_here
+
+# API Secret Token (for HTTP endpoint auth)
+API_SECRET_TOKEN=your_secret_token_here
+
+# Web Server Port
+PORT=10000
