update cron workflow

--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,8 @@
-# Render Blueprint - Silver Market Bot
+# Render Blueprint - Silver Market Bot (Free Tier)
 # https://render.com/docs/blueprint-spec
 
 services:
-  # Main Web Service
+  # Main Web Service (Free)
   - type: web
     name: slv-dashboard
     runtime: docker
@@ -19,47 +19,3 @@ services:
         generateValue: true
       - key: PORT
         value: 10000
-
-  # Cron Job - Hourly Update (Mon-Fri 13:00-23:59 UTC = 8:00-18:59 EST)
-  - type: cron
-    name: slv-hourly-am
-    runtime: docker
-    schedule: "0 13-23 * * 1-5"
-    dockerCommand: python app.py hourly --webhook
-    envVars:
-      - key: DISCORD_WEBHOOK_URL
-        sync: false
-      - key: METALS_DEV_KEY
-        sync: false
-
-  # Cron Job - Hourly Update (Mon-Fri 00:00-01:00 UTC = 19:00-20:00 EST)
-  - type: cron
-    name: slv-hourly-pm
-    runtime: docker
-    schedule: "0 0-1 * * 2-6"
-    dockerCommand: python app.py hourly --webhook
-    envVars:
-      - key: DISCORD_WEBHOOK_URL
-        sync: false
-      - key: METALS_DEV_KEY
-        sync: false
-
-  # Cron Job - ETF Monitor (Mon-Fri 22:00-23:59 UTC = 17:00-18:59 EST)
-  - type: cron
-    name: slv-etf-monitor-am
-    runtime: docker
-    schedule: "*/5 22-23 * * 1-5"
-    dockerCommand: python app.py etf-check --webhook
-    envVars:
-      - key: DISCORD_WEBHOOK_URL
-        sync: false
-
-  # Cron Job - ETF Monitor (Mon-Fri 00:00-01:00 UTC = 19:00-20:00 EST)
-  - type: cron
-    name: slv-etf-monitor-pm
-    runtime: docker
-    schedule: "*/5 0-1 * * 2-6"
-    dockerCommand: python app.py etf-check --webhook
-    envVars:
-      - key: DISCORD_WEBHOOK_URL
-        sync: false
