add github action and database persistence

--- a/.github/workflows/scheduled-tasks.yml
+++ b/.github/workflows/scheduled-tasks.yml
@@ -1,16 +1,15 @@
 # GitHub Actions - Scheduled Tasks for Silver Market Bot
 # Triggers Render web service endpoints on schedule
+# Syncs database back to GitHub for persistence
 
 name: Scheduled Tasks
 
 on:
   schedule:
     # Hourly Update: Mon-Fri 8:00-20:00 EST = UTC 13:00-01:00
-    # Split into two schedules to avoid crossing midnight
     - cron: '0 13-23 * * 1-5'  # UTC 13:00-23:00 Mon-Fri
-    - cron: '0 0-1 * * 2-6'    # UTC 00:00-01:00 Tue-Sat (= EST Mon-Fri evening)
+    - cron: '0 0-1 * * 2-6'    # UTC 00:00-01:00 Tue-Sat
 
-  # Allow manual trigger
   workflow_dispatch:
     inputs:
       task:
@@ -22,11 +21,11 @@ on:
           - hourly
           - daily
           - etf-check
+          - sync-db
 
 jobs:
   hourly-update:
     runs-on: ubuntu-latest
-    # Only run on schedule or manual hourly trigger
     if: github.event_name == 'schedule' || (github.event_name == 'workflow_dispatch' && github.event.inputs.task == 'hourly')
     steps:
       - name: Trigger Hourly Update
@@ -43,4 +42,74 @@ jobs:
           if [ "$http_code" != "200" ]; then
             echo "Request failed with status $http_code"
             exit 1
+          fi
+
+  daily-report:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch' && github.event.inputs.task == 'daily'
+    steps:
+      - name: Trigger Daily Report
+        run: |
+          response=$(curl -s -w "\n%{http_code}" \
+            "${{ secrets.RENDER_SERVICE_URL }}/run/daily?token=${{ secrets.API_SECRET_TOKEN }}")
+
+          http_code=$(echo "$response" | tail -n1)
+          body=$(echo "$response" | sed '$d')
+
+          echo "Response: $body"
+          echo "HTTP Code: $http_code"
+
+          if [ "$http_code" != "200" ]; then
+            echo "Request failed"
+            exit 1
+          fi
+
+  etf-check-manual:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch' && github.event.inputs.task == 'etf-check'
+    steps:
+      - name: Check ETF Holdings
+        run: |
+          response=$(curl -s -w "\n%{http_code}" \
+            "${{ secrets.RENDER_SERVICE_URL }}/run/etf-check?token=${{ secrets.API_SECRET_TOKEN }}")
+
+          http_code=$(echo "$response" | tail -n1)
+          body=$(echo "$response" | sed '$d')
+
+          echo "Response: $body"
+          echo "HTTP Code: $http_code"
+
+          if [ "$http_code" != "200" ]; then
+            echo "Request failed"
+            exit 1
+          fi
+
+  sync-database:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch' && github.event.inputs.task == 'sync-db'
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Download database from Render
+        run: |
+          curl -s -o cache/silver_market.db \
+            "${{ secrets.RENDER_SERVICE_URL }}/download/db?token=${{ secrets.API_SECRET_TOKEN }}" || true
+
+          if [ -f cache/silver_market.db ]; then
+            echo "Database downloaded successfully"
+            ls -la cache/
+          else
+            echo "No database to download"
+          fi
+
+      - name: Commit database
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          if [ -f cache/silver_market.db ]; then
+            git add cache/silver_market.db
+            git diff --staged --quiet || git commit -m "chore: sync database $(date -u +%Y-%m-%d)"
+            git push
           fi
