--- a/.github/workflows/sync-database.yml
+++ b/.github/workflows/sync-database.yml
@@ -10,12 +10,17 @@ on:
 
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   sync-database:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Download database from Render
         run: |
